--- a/store.html
+++ b/store.html
@@ -9,14 +9,14 @@
 
 <body>
 
-        <nav class="nav">
-            <ul>
-                <li><a>HOME</a></li>
-                <li><a href="store.html">STORE</a></li>
-                <li><a>ABOUT</a></li>
-            </ul>
-        </nav>
-        <h1 class="band-name">Our band</h1>
+    <nav class="nav">
+        <ul>
+            <li><a>HOME</a></li>
+            <li><a href="store.html">STORE</a></li>
+            <li><a>ABOUT</a></li>
+        </ul>
+    </nav>
+    <h1 class="band-name">Our band</h1>
 
     <main>
         <h2 class="section-header">Click on an album to add it to the cart!</h2>
@@ -59,7 +59,8 @@
         </div>
     </main>
 
-      <p>Prouldy made by ACIT 1620 students - Winter 2021</p>
+    <p>Proudly made by ACIT 1620 students - Winter 2021</p>
 
 </body>
+
 </html>
