--- a/store.html
+++ b/store.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="This is the description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./scripts/app.js"></script>
     <title>Welcome to Our Store</title>
 </head>
 
@@ -16,7 +20,10 @@
             <li><a>ABOUT</a></li>
         </ul>
     </nav>
-    <h1 class="band-name">Our band</h1>
+
+    <header>
+        <h1 class="band-name">Our band</h1>
+    </header>
 
     <main>
         <h2 class="section-header">Click on an album to add it to the cart!</h2>
@@ -24,22 +31,22 @@
             <section class="shop-items">
                 <div class="shop-item">
                     <span>Album 1</span>
-                    <img class="shop-item-image" id="Album 1">
+                    <img class="shop-item-image" id="Album 1" alt="Album 1">
                 </div>
 
                 <div class="shop-item">
                     <span>Album 2</span>
-                    <img class="shop-item-image" id="Album 2">
+                    <img class="shop-item-image" id="Album 2" alt="Album 2">
                 </div>
 
                 <div class="shop-item">
                     <span>Album 3</span>
-                    <img class="shop-item-image" id="Album 3">
+                    <img class="shop-item-image" id="Album 3" alt="Album 3">
                 </div>
 
                 <div class="shop-item">
                     <span>Album 4</span>
-                    <img class="shop-item-image" id="Album 4">
+                    <img class="shop-item-image" id="Album 4" alt="Album 4">
                 </div>
 
             </section>
@@ -59,7 +66,9 @@
         </div>
     </main>
 
-    <p>Proudly made by ACIT 1620 students - Winter 2021</p>
+    <footer>
+        <p>Proudly made by ACIT 1620 students - Winter 2021</p>
+    </footer>
 
 </body>
 
