--- a/store.html
+++ b/store.html
@@ -29,24 +29,24 @@
         <h2 class="section-header">Click on an album to add it to the cart!</h2>
         <div class="wrapper">
             <section class="shop-items">
-                <div class="shop-item">
+                <div class="shop-item album1">
                     <span>Album 1</span>
-                    <img class="shop-item-image" id="Album 1" alt="Album 1">
+                    <img class="shop-item-image" id="Album 1" alt="Album 1" src="./img/Album1.png">
                 </div>
 
-                <div class="shop-item">
+                <div class="shop-item album2">
                     <span>Album 2</span>
-                    <img class="shop-item-image" id="Album 2" alt="Album 2">
+                    <img class="shop-item-image" id="Album 2" alt="Album 2" src="./img/Album2.png">
                 </div>
 
-                <div class="shop-item">
+                <div class="shop-item album3">
                     <span>Album 3</span>
-                    <img class="shop-item-image" id="Album 3" alt="Album 3">
+                    <img class="shop-item-image" id="Album 3" alt="Album 3" src="./img/Album3.png">
                 </div>
 
-                <div class="shop-item">
+                <div class="shop-item album4">
                     <span>Album 4</span>
-                    <img class="shop-item-image" id="Album 4" alt="Album 4">
+                    <img class="shop-item-image" id="Album 4" alt="Album 4" src="./img/Album4.png">
                 </div>
 
             </section>
@@ -55,9 +55,9 @@
             <section class="cart">
                 <h3 class="section-header">CART</h3>
                 <div class="cart-row">
-                    <span>IMAGE</span>
-                    <span>NAME</span>
-                    <span>PRICE</span>
+                    <span class="cart-image">IMAGE</span>
+                    <span class="cart-name">NAME</span>
+                    <span class="cart-price">PRICE</span>
                 </div>
                 <hr>
             </section>
