--- a/store.html
+++ b/store.html
@@ -54,11 +54,12 @@
 
             <section class="cart">
                 <h3 class="section-header">CART</h3>
-                <div class="cart-row">
+                <div class="cart-row cart-headers">
                     <span class="cart-image">IMAGE</span>
                     <span class="cart-name">NAME</span>
                     <span class="cart-price">PRICE</span>
                 </div>
+                <div id="cart-items"></div>
                 <hr>
             </section>
 
